Footer bug fix on small screens

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -387,6 +387,7 @@ footer {
 
   @media all and (max-width: 500px) {
     height: $footerHeight * 2;
+    margin-bottom: -$footerHeight * 2;
 
     div {
       width: 100vw;
